# jian_zhi_offer

./: .gitignore  README.md
chap2/: .test1.cpp.swp
chap2/0_mergeArray/: CMakeLists.txt
chap2/3_findValInArray/: CMakeLists.txt
chap2/3_findValInArray/code/: test3.cpp
chap2/3_findValInArray/testcase/: testcase.cpp
chap2/6_recreateBinaryTree/: CMakeLists.txt
chap2/6_recreateBinaryTree/.metadata/: version.ini
chap2/6_recreateBinaryTree/.metadata/.plugins/org.eclipse.cdt.core/: RecreateBinaryTree.language.settings.xml
chap2/6_recreateBinaryTree/.metadata/.plugins/org.eclipse.core.resources/: 1.snap
chap2/6_recreateBinaryTree/.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/org.eclipse.egit.core/: GitProjectData.properties
chap2/6_recreateBinaryTree/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
chap2/6_recreateBinaryTree/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
chap2/6_recreateBinaryTree/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
chap2/6_recreateBinaryTree/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
chap2/6_recreateBinaryTree/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/remote-history/: segments_1
chap2/6_recreateBinaryTree/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.zkspc_0/: node.properties
chap2/6_recreateBinaryTree/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.zkspc_0/FP.local.files_0/: node.properties
chap2/6_recreateBinaryTree/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
chap2/6_recreateBinaryTree/code/: tree.cpp  tree.h
chap2/6_recreateBinaryTree/testcase/: testcase.cpp  testfixture.cpp  testfixture.h
chap2/CMyStringOperator/: CMakeLists.txt  CMyString.h  build.sh
chap2/CMyStringOperator/testcase/: test1.cpp
chap2/mergeArray/: CMakeLists.txt  build.sh
chap2/mergeArray/code/: Array.cpp  Array.h  mergeArray.cpp
chap2/mergeArray/testcase/: testcase.cpp
(+40 files in other folders)
